[tool.poetry]
name = "osmosis-plugin"
version = "0.0.1"
description = ""
authors = ["settler"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
senkalib = {git = 'https://github.com/yuma300/senkalib.git', rev = '0eb3c92ae6593ce8175f48c5cee099539be84f52' }
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pre-commit = "^2.17.0"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
pyright = "^1.1.227"
black = "^22.1.0"
isort = "^5.10.1"

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
